# deep4downscaling

./: README.md  pyproject.toml  setup.py
d4d.egg-info/: PKG-INFO
deep4downscaling/: datasets.py  trans.py
deep4downscaling/console/: d4dpredict.py  d4dtrainer.py
deep4downscaling/deep/: loss.py  models.py  pred.py
